--- a/Telegram/ConfigTelegram.json
+++ b/Telegram/ConfigTelegram.json
@@ -3,8 +3,9 @@
 	"token":"1747072933:AAH1jSXnFNSFMdCLZy-Fpktm7qb2hYbPE-I",
 	"full":["setzero", "vaiazero", "start", "stop", "foto"],
 	"parz":["ruota","impostalimite","soglia","setlimiti", "setlimitesx", "setlimitedx", "comunicazioni"],
-	"get": ["gradi", "servizi", "getlimiti", "admin","parametrisistema"],
+	"get": ["gradi", "getlimiti", "admin","parametrisistema"],
 	"delete":["resetlimiti"],
+	"services": "servizi",
 	"avvio": "avvio",
 	"service_code": "tgBot"
 }
